force-app/main/default/objects/Deposit_Accounts__c/Deposit_Accounts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Deposit Accounts</label>
</CustomObject>