force-app/main/default/objects/Deposit_Accounts__c/fields/Account_Name_on_Clearing_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_on_Clearing_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name on Clearing Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>