force-app/main/default/objects/Deposit_Accounts__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>