force-app/main/default/objects/Deposit_Accounts__c/fields/Transit_Number__c.field-meta.xml
<CustomField>
    <fullName>Transit_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>